Bug 261475 - Fix !ENABLE(MATHML) build after 267903@main
Summary: Fix !ENABLE(MATHML) build after 267903@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Don Olmstead
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-12 13:23 PDT by Don Olmstead
Modified: 2023-09-12 14:44 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Don Olmstead 2023-09-12 13:23:33 PDT
...
Comment 1 Don Olmstead 2023-09-12 13:34:46 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17707
Comment 2 EWS 2023-09-12 14:43:05 PDT
Committed 267918@main (af4e6a068583): <https://commits.webkit.org/267918@main>

Reviewed commits have been landed. Closing PR #17707 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-09-12 14:44:16 PDT
<rdar://problem/115388672>