Fix !ENABLE(MATHML) build after 267903@main https://bugs.webkit.org/show_bug.cgi?id=261475

Unreviewed build fix.

Place `ENABLE(MATHML)` guards around `RenderMathMLBlock`.

* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:

Canonical link: https://commits.webkit.org/267918@main